--- a/my_page/templates/page_ani_list.html
+++ b/my_page/templates/page_ani_list.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 	<ul class="box">
-		<li><a href="http://127.0.0.1:8000/">首 页</a></li>
+		<li><a href="/">首 页</a></li>
 		<li class="line">|</li>
 		<li><a href="{% url 'pro_list'%}">过敏原</a></li>
 		<li class="line">|</li>
@@ -21,6 +21,8 @@
 		<li><a href="page/ani/4">贝类</a></li>
 		<li class="line">|</li>
 		<li><a href="page/spe">红外光谱介绍</a></li>
+		<li class="line">|</li>
+		<li><a href="page/lab">关于我们</a></li>
 	</ul>
 	<div><h3>{{kind}}类共有{{animals|length}}种</h3></div>
 	<hr>
