--- a/my_page/templates/page_lab.html
+++ b/my_page/templates/page_lab.html
@@ -57,17 +57,10 @@ window.onload=function()
 		<li class="line">|</li>
 		<li><a href="page/lab">关于我们</a></li>
 	</ul>
-	<div class="site_title">
-		<h1>水产品主要过敏原数据库</h1>
+	<div class="lab_info">
+		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;本数据库是由上海海洋大学食品学院农业部水产品贮藏保鲜质量安全风险评估实验室（上海），食品科学与工程高原学科下属“食品质量安全与风险评估”团队主持建设的。本学科团队主要应用生物技术、分子生态学技术、纳米技术、光谱技术、免疫学技术、智能感官等新方法，开展水产食品中主要危害因子的高通量快速检测、食品安全风险评估、营养品质评价与质量安全控制等研究。
 	</div>
-	<div class="indexbox">
-	<ul id="ul1">
-	<a href="page/ani/1"><li id='li1'><h3>鱼</h3></li></a>
-	<a href="page/ani/2"><li id='li2'><h3>虾</h3></li></a>
-	<a href="page/ani/3"><li id='li3'><h3>蟹</h3></li></a>
-	<a href="page/ani/4"><li id='li4'><h3>贝</h3></li></a>
-	</ul>
-	</div>
+	<div class='imgbox2'><img src="/static/img/school.jpg"></div>
 	<div class="footer">
 		<p>豫ICP备18042850号-1 Copyright©2019-2020 版权所有 B403@ISHOU</p>
 		<p>农业部水产品贮藏保鲜质量安全风险评估实验室(上海)</p>
